--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <button id="compute" onclick="compute()">Calculate Interest</button> <br>
                 <span id="result">
                 </span>
-                <div class="copyright">&#169; Everyone can get rich.</div>
+                <div class="copyright">&#169; Everyone Can Get Rich.</div>
             </div>            
         </div>
     </body>
